# lvgl_linux_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  lv_conf.h  lv_drv_conf.h  main.c
cmake/: arm926ejs-musl-toolchain.cmake  simulator.cmake  target.cmake
port/: lv_port_disp.h  lv_port_disp_drm.c  lv_port_disp_fbdev.c  lv_port_sdl.c  lv_port_tick.h  lv_port_tick_linux.c
